--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -2,7 +2,7 @@
   background-image: url('https://images.unsplash.com/photo-1553877522-43269d4ea984?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-repeat: none;
   background-size: cover ;
-  height: 500px;
+  height: 100vh;
 }
 
 //  banner-input
