--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top">
     <div class="container d-flex justify-content-center">
         <!-- logo -->
          <div class="d-flex align-items-center me-auto">
