--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -300,12 +300,31 @@ $cyans: (
 // scss-docs-start theme-color-variables
 $primary:       $blue !default;
 $secondary:     $gray-600 !default;
-$success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
-$danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+
+// $success:       $green !default;
+// $danger:        $red !default;
+
+$primary-200: #CCFDF7;
+$primary-400: #9AFFE9;
+$primary-600: #43E1BF;
+$primary-800: #02D5A6;
+$primary-1000: #009F7B;
+
+
+$gray-100: #F0F0F0;
+$gray-200: #D4D4D4;
+$gray-400: #939393;
+$gray-600: #5B5B5B;
+$gray-800: #333333;
+$gray-1000: #212121;
+
+$success: #26E08A;
+$danger: #FB5A72;
+
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -317,7 +336,19 @@ $theme-colors: (
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "dark":       $dark
+  "dark":       $dark,
+  "primary-200":  $primary-200,
+"primary-200":  $primary-400,
+"primary-200":  $primary-600,
+"primary-200":  $primary-800,
+"primary-200":  $primary-1000,
+"gray-100":  $gray-100,
+"gray-100":  $gray-200,
+"gray-100":  $gray-400,
+"gray-100":  $gray-600,
+"gray-100":  $gray-800,
+"gray-100":  $gray-1000,
+
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -409,12 +440,28 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 // scss-docs-start spacer-variables-maps
 $spacer: 1rem !default;
 $spacers: (
+  // 0: 0,
+  // 1: $spacer * .25,
+  // 2: $spacer * .5,
+  // 3: $spacer,
+  // 4: $spacer * 1.5,
+  // 5: $spacer * 3,
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
+  1: $spacer * 0.5,
+  2: $spacer * 0.75,
   3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  4: $spacer * 1.25,
+  5: $spacer * 1.5,
+  6: $spacer * 2,
+  7: $spacer * 2.25,
+  8: $spacer * 2.5,
+  9: $spacer * 3,
+  10: $spacer * 3.25,
+  11: $spacer * 3.5,
+  12: $spacer * 4,
+  13: $spacer * 4.25,
+  14: $spacer * 4.5,
+  15: $spacer * 5
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -425,7 +472,9 @@ $spacers: (
 // scss-docs-start position-map
 $position-values: (
   0: 0,
+  25: 25%,
   50: 50%,
+  75: 75%
   100: 100%
 ) !default;
 // scss-docs-end position-map
