--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -474,7 +474,7 @@ $position-values: (
   0: 0,
   25: 25%,
   50: 50%,
-  75: 75%
+  75: 75%,
   100: 100%
 ) !default;
 // scss-docs-end position-map
