--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,3 @@
 .header{
-  background: #69F0AE;
-  font-size: 64px;
+  background-image: linear-gradient(to bottom, black 10%, transparent 100%);
 }
