--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,10 +1,10 @@
-<footer class="footer bg-light"></footer>
+<footer class="footer">
     <div class="container">
         <div class="row py-5">
-            <div class="col-6 d-flex justify-content-center">
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                    <img class="mb-2" src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 100px;">
-                    <h3>Dream Workshop</h3>
+            <div class="col-3 d-flex">
+                <div class="community">
+                    <img class="mb-2" src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 60px;">
+                    <h3 class="fw-bold">Dream Workshop</h3>
                     <ul class="d-flex">
                         <li><a href="#"><i class="icons bi bi-facebook me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-instagram me-3"></i></a></li>
@@ -13,24 +13,25 @@
                 </div>
         
             </div>
-            <div class="col-6 d-flex text-center">
-                <ul class="me-5">
-                    <li><a class="fs-5 mb-2" href="#">關於我們</a></li>
-                    <li><a class="mb-2" href="#">網站理念</a></li>
-                    <li><a class="mb-2" href="#">常見問題</a></li>
-                    <li><a href="#">隱私權政策</a></li>
+            <div class="col-9 d-flex">
+                <ul class="footer-navbar me-5">
+                    <li class="fs-5 fw-bold text-gray-400 mb-3">關於我們</li>
+                    <li><a class="fw-bold text-primary-600 mb-2" href="#">網站理念</a></li>
+                    <li><a class="fw-bold text-primary-600 mb-2" href="#">常見問題</a></li>
+                    <li><a class="fw-bold text-primary-600" href="#">隱私權政策</a></li>
                 </ul>
-                <ul class="me-5">
-                    <li class="fs-5 mb-2"><a href="#">付費方案</a></li>
-                    <li class="mb-2"><a href="#">購點方案</a></li>
-                    <li><a href="#">購點專區</a></li>
+                <ul class="footer-navbar me-5">
+                    <li class="fs-5 fw-bold text-gray-400 mb-3">付費方案</li>
+                    <li class="fw-bold text-primary-600 mb-2"><a href="#">購點方案</a></li>
+                    <li class="fw-bold text-primary-600"><a href="#">購點專區</a></li>
                 </ul>
-                <ul>
-                    <li class="fs-5 mb-2"><a href="#">特色服務</a></li>
-                    <li class="mb-2"><a href="#">平台對街活動</a></li>
-                    <li><a href="#">討論區</a></li>
+                <ul class="footer-navbar">
+                    <li class="fs-5 fw-bold text-gray-400 mb-3">特色服務</li>
+                    <li class="fw-bold text-primary-600 mb-2"><a href="#">平台對街活動</a></li>
+                    <li class="fw-bold text-primary-600"><a href="#">討論區</a></li>
                 </ul>
             </div>
         </div>
+        <small class="text-gray-400">© Dream Workshop 2024 Copyright. All Rights Reserved.</small>
     </div>   
 </footer>
