--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -2,7 +2,7 @@
 @import './utils/variables';
 @import "../../node_modules/bootstrap";
 
-@import "./base/base";
+@import './base/base.scss';
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
