--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -26,11 +26,13 @@ body {
     h5,
     h6 {
       letter-spacing: 2%;
+
     }
     
     p {
       letter-spacing: 0.05em;
       margin-bottom: 0;
+      color: $gray-100;
     }
     ul {
       padding-left: 0px;
