--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -12,5 +12,7 @@
 @import './pages/activity.scss';
 @import './pages/ProjectList-project.scss';
 @import './pages/_about-us.scss';
+@import './pages/activity-casper.scss';
+@import './pages/discuss.scss';
 
 
