--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -338,16 +338,16 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
   "primary-200":  $primary-200,
-"primary-400":  $primary-400,
-"primary-600":  $primary-600,
-"primary-800":  $primary-800,
-"primary-1000":  $primary-1000,
-"gray-100":  $gray-100,
-"gray-200":  $gray-200,
-"gray-400":  $gray-400,
-"gray-600":  $gray-600,
-"gray-800":  $gray-800,
-"gray-1000":  $gray-1000,
+  "primary-400":  $primary-400,
+  "primary-600":  $primary-600,
+  "primary-800":  $primary-800,
+  "primary-1000":  $primary-1000,
+  "gray-100":  $gray-100,
+  "gray-200":  $gray-200,
+  "gray-400":  $gray-400,
+  "gray-600":  $gray-600,
+  "gray-800":  $gray-800,
+  "gray-1000":  $gray-1000,
 
 ) !default;
 // scss-docs-end theme-colors-map
@@ -652,7 +652,7 @@ $aspect-ratios: (
 
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif:      'Noto Sans TC',system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 // stylelint-enable value-keyword-case
 $font-family-base:            var(--#{$prefix}font-sans-serif) !default;
@@ -784,6 +784,7 @@ $table-cell-padding-x:        .5rem !default;
 $table-cell-padding-y-sm:     .25rem !default;
 $table-cell-padding-x-sm:     .25rem !default;
 
+
 $table-cell-vertical-align:   top !default;
 
 $table-color:                 var(--#{$prefix}emphasis-color) !default;
@@ -828,6 +829,17 @@ $table-variants: (
   "danger":     shift-color($danger, $table-bg-scale),
   "light":      $light,
   "dark":       $dark,
+  "primary-200":  $primary-200,
+  "primary-400":  $primary-400,
+  "primary-600":  $primary-600,
+  "primary-800":  $primary-800,
+  "primary-1000":  $primary-1000,
+  "gray-100":  $gray-100,
+  "gray-200":  $gray-200,
+  "gray-400":  $gray-400,
+  "gray-600":  $gray-600,
+  "gray-800":  $gray-800,
+  "gray-1000":  $gray-1000,
 ) !default;
 // scss-docs-end table-loop
 
