首頁更新進度

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">付費方案</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">討論區</a>
+            <a class="nav-link" href="#">討論區</a>
           </li>
         </ul>
       </div>
