--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,7 +11,11 @@
         font-size: 20px;
         line-height: 30px;
         letter-spacing: 10%;
+        &:hover {
+            color: $primary-600
+        }
     }
+    
 }
 
 .login-btn {
