--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,5 +1,5 @@
 .front-page-banner {
-  background-image: url('/assets/images/Banner.png');
+  background-image: url('/assets/images/banner.jpg');
   background-blend-mode: saturation;
   background-repeat: none;
   background-size: cover ;
@@ -83,6 +83,45 @@
 
 .n-icon::after {
   display: none;
+}
+
+.features {
+  padding-inline: 125px;
+}
+
+
+.feature-icon {
+  border-radius: 80px;
+  width: 80px;
+  height: 80px;
+  background-color: $gray-800;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.feature-content {
+  font-size: 20px;
+  line-height: 30px;
+  color: $gray-200;
+}
+
+.swiper-slide {
+  border: 1px solid #43E1BF;
+}
+
+.swiper-slide {
+  height: auto;
+  //因為每張照片不同，所以這裡使用 height: auto; 將所有 .swiper-slide 設定為自適應高度。下面的 height: 100%; 會使圖片內容填滿外部容器的高度。
+  
+  img {
+    display: block;
+    width: 200px;
+    height: 100%;
+    object-fit: cover;
+    //object-fit 可設定其圖片內容與外框的關係，使用 cover 即表示內容會縮放到整個外框。
+  }
 }
 
 
