--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -15,13 +15,13 @@
             </div>
             <div class="col-9 d-flex">
                 <ul class="footer-navbar me-5">
-                    <li class="fs-5 fw-bold text-gray-400 mb-3">關於我們</li>
+                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="#">關於我們</a></li>
                     <li><a class="fw-bold text-primary-600 mb-2" href="#">網站理念</a></li>
                     <li><a class="fw-bold text-primary-600 mb-2" href="#">常見問題</a></li>
                     <li><a class="fw-bold text-primary-600" href="#">隱私權政策</a></li>
                 </ul>
                 <ul class="footer-navbar me-5">
-                    <li class="fs-5 fw-bold text-gray-400 mb-3">付費方案</li>
+                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="#">付費方案</a></li>
                     <li class="fw-bold text-primary-600 mb-2"><a href="#">購點方案</a></li>
                     <li class="fw-bold text-primary-600"><a href="#">購點專區</a></li>
                 </ul>
