--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -27,8 +27,8 @@
                 </ul>
                 <ul class="footer-navbar">
                     <li class="fs-5 fw-bold text-gray-400 mb-3">特色服務</li>
-                    <li class="fw-bold text-primary-600 mb-2"><a href="#">平台對街活動</a></li>
-                    <li class="fw-bold text-primary-600"><a href="#">討論區</a></li>
+                    <li class="fw-bold text-primary-600 mb-2"><a href="activity.html">平台對街活動</a></li>
+                    <li class="fw-bold text-primary-600"><a href="discuss.html">討論區</a></li>
                 </ul>
             </div>
         </div>
