--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -5,6 +5,8 @@
 
 @import './base/base.scss';
 
+@import './utils/universal.scss';
+
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
