更新活動、討論區細項修改

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -14,5 +14,6 @@
 @import './pages/_about-us.scss';
 @import './pages/activity-casper.scss';
 @import './pages/discuss.scss';
+@import './pages/post-article.scss';
 
 
