更新頁首頁尾連結

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="col-9 d-flex">
                 <ul class="footer-navbar me-5">
-                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="#">關於我們</a></li>
+                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="about-us.html">關於我們</a></li>
                     <li><a class="fw-bold text-primary-600 mb-2" href="#">網站理念</a></li>
                     <li><a class="fw-bold text-primary-600 mb-2" href="#">常見問題</a></li>
                     <li><a class="fw-bold text-primary-600" href="#">隱私權政策</a></li>
@@ -27,7 +27,7 @@
                 </ul>
                 <ul class="footer-navbar">
                     <li class="fs-5 fw-bold text-gray-400 mb-3">特色服務</li>
-                    <li class="fw-bold text-primary-600 mb-2"><a href="activity.html">平台對街活動</a></li>
+                    <li class="fw-bold text-primary-600 mb-2"><a href="activity.html">平台對接活動</a></li>
                     <li class="fw-bold text-primary-600"><a href="discuss.html">討論區</a></li>
                 </ul>
             </div>
