--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -14,10 +14,10 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">找創業項目</a>
+            <a class="nav-link" href="ProjectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">找投資人</a>
+            <a class="nav-link" href="ProjectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
