首頁進度更新

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,17 +1,17 @@
 .footer {
-    background: #212121B2;
-    padding-top: 52px;
-    padding-bottom: 80px;
+  background: #212121b2 70%;
+  padding-top: 52px;
+  padding-bottom: 80px;
 }
 
 .community {
-    color: $gray-200;
+  color: $gray-200;
 }
 
 .icons {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .footer-navbar {
-    width: 196px;
+  width: 196px;
 }
