--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,7 +2,7 @@
     <div class="container d-flex justify-content-center">
         <!-- logo -->
          <div class="d-flex align-items-center me-auto">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 56px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
