--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,8 +1,8 @@
 .front-page-banner {
-  background-image: url('/assets/images/banner.jpg');
+  background-image: url("/assets/images/banner.jpg");
   background-blend-mode: saturation;
   background-repeat: none;
-  background-size: cover ;
+  background-size: cover;
   height: 100vh;
 }
 
@@ -13,7 +13,7 @@
   line-height: 76.8px;
   letter-spacing: 5%;
   span {
-    color:$primary-600;
+    color: $primary-600;
   }
 }
 .banner-content {
@@ -22,50 +22,50 @@
 //  banner-input
 .banner-input {
   width: 41.25%;
-  background-color: #333333B2;
+  background-color: #333333b2;
   color: $gray-100;
   padding: 13px 24px;
-  border:2px solid $gray-100;
+  border: 2px solid $gray-100;
   border-radius: 0%;
   &:focus {
-    background-color: #333333B2;
+    background-color: #333333b2;
     color: $gray-100;
-    border:2px solid $primary-600;
+    border: 2px solid $primary-600;
   }
   &::placeholder {
-    color: $gray-100; 
+    color: $gray-100;
   }
 }
 
 .search-dropdown {
-  width:33.66% ;
+  width: 33.66%;
 }
 
 .dropdown-btn {
   background-color: $gray-800;
-  color: $gray-100; 
+  color: $gray-100;
   padding: 13px 24px;
-  border:2px solid $gray-100;
+  border: 2px solid $gray-100;
   border-radius: 0px;
   width: 100%;
   &:hover {
     background-color: $gray-800;
     color: $gray-100;
-    border:2px solid $primary-600;
+    border: 2px solid $primary-600;
   }
   &:focus {
-    background-color: #333333B2;
+    background-color: #333333b2;
     color: $gray-100;
-    border:2px solid $primary-600;
+    border: 2px solid $primary-600;
   }
 }
 
 .dropdown-menu {
-  background-color: $gray-800; 
+  background-color: $gray-800;
   border-radius: 0px;
   width: 100%;
   .dropdown-hover:hover {
-    outline: 2px dashed #43E1BF
+    outline: 2px dashed #43e1bf;
   }
   .dropdown-item {
     padding: 13px 24px;
@@ -85,10 +85,19 @@
   display: none;
 }
 
+.bg-halo {
+  // background-image: url('/assets/images/bg-halo.png');
+  background-color: $gray-1000;
+  background-image: url("/assets/images/bg-halo.png");
+  background-size: cover, contain;
+  /* 第一個背景圖片覆蓋整個元素，第二個根據內容顯示 */
+  background-position: center; /* 第一個在中央，第二個在右下角 */
+  background-repeat: no-repeat, no-repeat; /* 都不重複顯示 */
+}
+
 .features {
   padding-inline: 125px;
 }
-
 
 .feature-icon {
   border-radius: 80px;
@@ -107,17 +116,24 @@
   color: $gray-200;
 }
 
+.swiper-slide {
+  height: 100%;
+}
+
 .popular-card {
   background-color: $gray-800;
 }
+
 .businessSwiper {
   max-width: 1168px;
 }
+
 .business-swiper {
   width: 280px;
 }
 .popular-card-body {
   padding: 32px 24px 20px;
+  max-height: 304px;
 }
 
 .popular-card-title {
@@ -126,12 +142,27 @@
   letter-spacing: 11%;
 }
 
+.favorite {
+  position: absolute;
+  top: 21px;
+  right: 20px;
+}
+
+.bg-field {
+  background-image: url(/assets/images/bg-field.png);
+}
 
 .industry-card {
-  height: 100px;
+  height: 120px;
   padding: 12px;
   font-weight: bolder;
   display: flex;
   justify-content: end;
   align-items: end;
+  h5 {
+    color: $gray-100;
+    line-height: 30px;
+    font-weight: bold;
+    letter-spacing: 6%;
+  }
 }
