--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -17,7 +17,7 @@
             <a class="nav-link" href="http://localhost:5173/Dream-Workshop/pages/project/ProjectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ProjectList-investor.html">找投資人</a>
+            <a class="nav-link" href="http://localhost:5173/Dream-Workshop/pages/investor/ProjectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
