更新身分審核

--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -2,7 +2,7 @@
     <ul class="flex-column">
       <li><a href="#" class="nav-link text-gray-400 fs-4">我的帳戶</a></li>
       <li><a href="member.html" class="nav-link text-white fs-5 text-center" >個人資料</a></li>
-      <li><a href="#" class="nav-link text-white fs-5 text-center" >身份審核</a></li>
+      <li><a href="meber-identity.html" class="nav-link text-white fs-5 text-center" >身份審核</a></li>
       <li><a href="member-changepassword.html" class="nav-link text-white fs-5 text-center" >修改密碼</a></li>
       <li><a href="#" class="nav-link text-white fs-5 text-center">可用點數</a></li>
       <li><a href="#" class="nav-link text-white fs-5 text-center">隱私設置</a></li>
