--- a/layout/admin-sidebar.ejs
+++ b/layout/admin-sidebar.ejs
@@ -4,22 +4,44 @@
 </a>
 <ul class="nav flex-column px-2">
   <li class="nav-item">
-    <a href="#" class="nav-link admin-nav-link text-white" data-content="accounts">會員管理</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="accounts">
+      <i class="bi bi-person-fill"></i>
+      會員管理</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link admin-nav-link text-white" data-content="products">商品管理</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="startups">
+      <i class="bi bi-file-earmark-text-fill"></i>
+      創業項目</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link admin-nav-link text-white" data-content="orders">訂單管理</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="investors">
+      <i class="bi bi-cash-coin"></i>
+      投資者</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link admin-nav-link text-white" data-content="comments">評論管理</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="activities">
+      <i class="bi bi-calendar-check"></i>
+      活動管理</a>
   </li>
   <li class="nav-item">
-    <a href="#" class="nav-link admin-nav-link text-white" data-content="sales">銷售數據</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="pricingPlan">
+      <i class="bi bi-currency-dollar"></i>
+      付費方案</a>
   </li>
   <li class="nav-item">
-    <a href="/" class="nav-link admin-nav-link text-white">回前台首頁</a>
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="transactions">
+      <i class="bi bi-card-list"></i>
+      交易紀錄</a>
+  </li>
+  <li class="nav-item">
+    <a href="#" class="nav-link admin-nav-link text-white" data-content="articles">
+      <i class="bi bi-newspaper"></i>
+      文章管理</a>
+  </li>
+  <li class="nav-item">
+    <a href="/" class="nav-link admin-nav-link text-white">
+      <i class="bi bi-arrow-return-left"></i>
+      回前台首頁</a>
   </li>
   <li class="nav-item mt-5">
     <a href="/adminLogin" class="nav-link admin-nav-link d-flex align-items-center text-white" onclick="adminLogout()">
