--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,21 +1,21 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import "../../node_modules/bootstrap/scss/functions";
-@import './utils/variables';
+@import "./utils/variables";
 @import "../../node_modules/bootstrap";
 
-@import './base/base.scss';
+@import "./base/base.scss";
 
-@import './utils/universal.scss';
+@import "./mixin/mixin.scss";
 
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import "./utils/universal.scss";
 
-@import './pages/index.scss';
-@import './pages/activity.scss';
-@import './pages/ProjectList-project.scss';
-@import './pages/_about-us.scss';
-@import './pages/activity-casper.scss';
-@import './pages/discuss.scss';
-@import './pages/post-article.scss';
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
 
-
+@import "./pages/index.scss";
+@import "./pages/activity.scss";
+@import "./pages/ProjectList-project.scss";
+@import "./pages/_about-us.scss";
+@import "./pages/activity-casper.scss";
+@import "./pages/discuss.scss";
+@import "./pages/post-article.scss";
