--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,11 +1,18 @@
 .footer {
-  background: #212121b2 70%;
+  position: relative;
   padding-top: 52px;
   padding-bottom: 80px;
+  @include mobile {
+    padding-top: 40px;
+    padding-bottom: 56px;
+  }
 }
 
 .community {
   color: $gray-200;
+  @include mobile {
+    text-align: center;
+  }
 }
 
 .icons {
@@ -14,4 +21,34 @@
 
 .footer-navbar {
   width: 196px;
+  @include mobile {
+    text-align: center;
+  }
+}
+
+.bg-field {
+  position: absolute;
+  bottom: 0;
+  height: 1256px;
+  width: 100%;
+  z-index: -2;
+  @include mobile {
+    height: 1740px;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
+.mask {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 405px;
+  z-index: -1;
+  background: #212121b2;
+  @include mobile {
+    height: 458px;
+    background-position: center;
+    background-size: cover;
+  }
 }
