--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -4,6 +4,9 @@
   background-repeat: none;
   background-size: cover;
   height: 100vh;
+  @include mobile {
+    padding-inline: 12px;
+  }
 }
 
 .banner-title {
@@ -15,11 +18,22 @@
   span {
     color: $primary-600;
   }
+  @include mobile {
+    font-size: 32px;
+    line-height: 38.4px;
+    letter-spacing: 16%;
+  }
 }
 .banner-content {
   width: 606px;
 }
+
 //  banner-input
+.banner-search {
+  @include mobile {
+    flex-direction: column;
+  }
+}
 .banner-input {
   width: 41.25%;
   background-color: #333333b2;
@@ -97,6 +111,15 @@
 
 .features {
   padding-inline: 125px;
+  @include mobile {
+    padding-inline: 12px;
+  }
+}
+
+.feature-title {
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .feature-icon {
@@ -148,8 +171,17 @@
   right: 20px;
 }
 
-.bg-field {
-  background-image: url(/assets/images/bg-field.png);
+.swiper-button-next,
+.swiper-button-prev {
+  @include mobile {
+    display: none;
+  }
+}
+
+.field-slogan {
+  @include mobile {
+    font-size: $h5-font-size;
+  }
 }
 
 .industry-card {
@@ -164,5 +196,9 @@
     line-height: 30px;
     font-weight: bold;
     letter-spacing: 6%;
+  }
+  @include mobile {
+    width: 100%;
+    height: 100px;
   }
 }
