--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,19 +1,23 @@
 <footer class="footer">
+    <img class="bg-field" src="/assets/images/bg-field.png"></img>
+    <div class="mask"></div>
     <div class="container">
-        <div class="row py-5">
-            <div class="col-3 d-flex">
+        <div class="row py-8">
+            <div class="col-lg-3 community-wrap mb-5">
                 <div class="community">
-                    <img class="mb-2" src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 60px;">
-                    <h3 class="fw-bold">Dream Workshop</h3>
-                    <ul class="d-flex">
+                    <a href="index.html">
+                        <img class="mb-1" src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 60px;">
+                    </a>
+                    
+                    <h3 class="fw-bold mb-5">Dream Workshop</h3>
+                    <ul class="d-flex justify-content-center justify-content-lg-start">
                         <li><a href="#"><i class="icons bi bi-facebook me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-instagram me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-line"></i></a></li>
                     </ul>
-                </div>
-        
+                </div>     
             </div>
-            <div class="col-9 d-flex">
+            <div class="col-lg-9 d-flex">
                 <ul class="footer-navbar me-5">
                     <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="about-us.html">關於我們</a></li>
                     <li><a class="fw-bold text-primary-600 mb-2" href="#">網站理念</a></li>
@@ -32,6 +36,6 @@
                 </ul>
             </div>
         </div>
-        <small class="text-gray-400">© Dream Workshop 2024 Copyright. All Rights Reserved.</small>
+        <small class="px-3 px-lg-0 text-gray-400">© Dream Workshop 2024 Copyright. All Rights Reserved.</small>
     </div>   
 </footer>
