--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,14 +1,16 @@
 <nav class="header navbar navbar-expand-lg fixed-top">
     <div class="container d-flex justify-content-center">
         <!-- logo -->
-         <div class="d-flex align-items-center me-auto">
+          <div class="d-flex justify-content-between align-items-center me-auto">
             <a class="navbar-brand" href="index.html">
                 <img src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 56px;">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
          </div>
+         <button class="navbar-toggler btn-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon d-flex align-items-center justify-content-center">
+            <i class="bi bi-list list-icon"></i>
+          </span>
+        </button>
       
       <!-- nav -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -28,12 +30,7 @@
         </ul>
       </div>
 
-      <!-- login -->
-       <!-- <div class="d-flex">
-        <a class="me-2" href="#">註冊登入</a>
-        <i class="bi bi-person-circle"></i>
-       </div> -->
-       <a href="#" class="btn login-btn btn-primary-600">
+       <a href="#" class="btn login-btn btn-primary-600 d-none d-lg-block">
         註冊/登入
        </a>
     </div>
