--- a/components/admin/investor.ejs
+++ b/components/admin/investor.ejs
@@ -1,6 +1,6 @@
-<h1 class="fs-2 mb-7 fw-bold">會員管理</h1>
+<h1 class="fs-2 mb-7 fw-bold">投資者</h1>
 <form class="form-inline w-100 d-flex align-items-center">
-  <input class="form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 會員姓名">
+  <input class="form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 投資者姓名">
   
   <button class="btn btn-primary-600 fw-bold rounded me-3" type="submit">搜尋</button>
   
@@ -31,19 +31,18 @@
   <table class="table mt-4">
     <thead class="table-light">
       <tr>
-        <th width="20">ID</th>
-        <th width="90">姓名</th>
+        <th width="70">會員ID</th>
+        <th width="140">投資者姓名</th>
         <th width="90">審核狀態</th>
-        <th width="90">帳戶狀態</th>
-        <th width="30" class="text-center">會員資訊</th>
-        <th width="30" class="text-center">會員審核</th>
-        <th width="30" class="text-center">刪除</th>
+        <th width="90">啟用狀態</th>
+        <th width="30" class="text-center">詳細資訊</th>
+        <th width="30" class="text-center">投資者管理</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>1</td>
-        <td>John Smith</td>
+        <td>Michael Smith</td>
         <td>
           <p class="fw-bold text-primary-600">
             已審核
@@ -56,27 +55,22 @@
         </td>
         </td>
         <td class="text-center">
-          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#accountViewModal">
+          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#investorViewModal">
             查看
           </button>
         </td>
         <td class="text-center">
-          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#accountVerifyModal">
-            審核
-          </button>
-        </td>
-        <td class="text-center">
-          <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#delAccountModal">
-            刪除
+          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#investorVerifyModal">
+            管理
           </button>
         </td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Christopher Jones</td>
+        <td>Olivia Davis</td>
         <td>
-          <p class="fw-bold text-primary-600">
-            已審核
+          <p class="fw-bold text-danger">
+            未審核
           </p>
         </td>
         <td>
@@ -86,18 +80,13 @@
         </td>
         </td>
         <td class="text-center">
-          <button  class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#accountViewModal">
+          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#investorViewModal">
             查看
           </button>
         </td>
         <td class="text-center">
-          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#accountVerifyModal">
-            審核
-          </button>
-        </td>
-        <td class="text-center">
-          <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#delAccountModal">
-            刪除
+          <button class="btn btn-outline-primary btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#investorVerifyModal">
+            管理
           </button>
         </td>
       </tr>
@@ -105,44 +94,28 @@
   </table>
 </div>
 <!-- 資訊 -->
-<div class="modal fade" id="accountViewModal" tabindex="-1">
+<div class="modal fade" id="investorViewModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header bg-primary-600">
-        <h5 class="fs-3 modal-title fw-bold">會員資訊</h5>
+        <h5 class="fs-3 modal-title fw-bold">投資者詳情</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body admin-modal-body">
-        <h4 class="fs-4 fw-bold mb-3">基本資訊</h4>
-        <p >會員ID：1</p>
-        <p>姓名：John Smith</p>
-        <p>性別：男</p>
-        <p>身分：投資者</p>
-        <p>連絡電話：0912345678</p>
-        <p>電子信箱：happy5678@gmail.com</p>
-        <hr>
-        <h4 class="fs-4 fw-bold mb-3">查看權限</h4>
-        <h5 class="fs-5 fw-bold">創業項目</h5>
-        <table class="table mt-4 mb-6">
-          <thead class="table-light">
-            <tr>
-              <th width="100">項目</th>
-              <th width="120">權限</th>
-            </tr>
-          </thead>
-          <tbody id="startup-tbody"></tbody>
-        </table>
-
-        <h5 class="fs-5 fw-bold">投資人</h5>
-        <table class="table mt-4">
-          <thead class="table-light">
-            <tr>
-              <th width="100">投資人</th>
-              <th width="120">權限</th>
-            </tr>
-          </thead>
-          <tbody id="investor-tbody"></tbody>
-        </table>
+        <p>投資人會員ID：7</p>
+        <p>姓名：Michael Smith</p>
+        <p>偏好領域：餐飲 ，一般服務 ，批發 / 零售</p>
+        <p>資金規模：30,000,000</p>
+        <p>投資人經歷：我在一個貧困的家庭中長大。
+          年輕時參加過海軍,因此他的全名經常被縮寫為「謝船長」。
+          在海軍服役期間,學到了許多關於紀律和金錢的重要教訓。
+          退役後,開辦了蟹堡王餐廳。
+          蟹堡王以其招牌菜「蟹堡」而聞名,
+          而這個漢堡的秘方是嚴格保守的秘密。
+          餐廳迅速成為比奇堡(Bikini Bottom)最受歡迎的餐飲場所之一。
+          經營風格非常嚴格且注重成本控制。
+          座右銘是「省錢就是賺錢」。儘管如此,我對餐廳的成功和顧客的滿意度也有高度的重視。
+          在這希望能夠找到同為餐飲相關領域的夥伴,我可以運用手邊相關資源,攜手夥伴共同開創新事業</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded" data-bs-dismiss="modal">取消</button>
@@ -151,21 +124,38 @@
     </div>
   </div>
 </div>
-<!-- 審核 -->
-<div class="modal fade" id="accountVerifyModal" tabindex="-1">
+<!-- 管理 -->
+<div class="modal fade" id="investorVerifyModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header bg-primary-600">
-        <h5 class="fs-3 modal-title fw-bold">會員審核</h5>
+        <h5 class="fs-3 modal-title fw-bold">投資者管理</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body admin-modal-body">
-        <h4 class="fs-5 mb-3">會員身分證正面</h4>
-        <img class="mb-8" src="../../assets/images/身分證正面樣本.jpg" alt="身分證正面">
-        <h4 class="fs-5 mb-3">會員身分證反面</h4>
-        <img class="mb-8" src="../../assets/images/身分證背面樣本.jpg" alt="身分證反面">
-        <h4 class="fs-5 mb-3">第二證件正面</h4>
-        <img src="../../assets/images/第二張證件樣本.jpg" alt="第二證件">
+        <h4 class="fs-4 mb-3">是否啟用</h4>
+        <form class="d-flex">
+          <label class="me-2">
+              <input type="radio" name="fruit" value="available">啟用
+          </label>
+          <label>
+              <input type="radio" name="fruit" value="unavailable">未啟用
+          </label>
+        </form>
+        <hr>
+        <h4 class="fs-4 mb-3">是否設置為熱門</h4>
+        <form class="d-flex">
+          <label class="me-2">
+              <input type="radio" name="fruit" value="available">是
+          </label>
+          <label>
+              <input type="radio" name="fruit" value="unavailable">否
+          </label>
+        </form>
+        <hr>
+        <h4 class="fs-4 mb-3">財力驗證</h4>
+        <p class="mb-2">財力證明：</p>
+        <img src="https://picsum.photos/id/514/600/400" alt="">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded">未通過</button>
