--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -13,6 +13,7 @@
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
 
+
 @import "./pages/index.scss";
 @import "./pages/activity.scss";
 @import "./pages/ProjectList-project.scss";
@@ -21,3 +22,6 @@
 @import "./pages/discuss.scss";
 @import "./pages/post-article.scss";
 @import "./pages/admin.scss";
+@import "./pages/meber-createdprojects.scss";
+@import "./pages/member-sidebar.scss";
+@import "./pages/article-content.scss";
