--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -308,6 +308,7 @@ $dark: $gray-900 !default;
 // $success:       $green !default;
 // $danger:        $red !default;
 
+
 $primary-200: #ccfdf7;
 $primary-400: #9affe9;
 $primary-600: #43e1bf;
@@ -323,6 +324,7 @@ $gray-1000: #212121;
 
 $success: #26e08a;
 $danger: #fb5a72;
+$danger-200: #FFD3D9;
 
 // scss-docs-end theme-color-variables
 
@@ -334,6 +336,7 @@ $theme-colors: (
   "info": $info,
   "warning": $warning,
   "danger": $danger,
+  "danger-200": $danger-200,
   "light": $light,
   "dark": $dark,
   "primary-200": $primary-200,
@@ -347,6 +350,7 @@ $theme-colors: (
   "gray-600": $gray-600,
   "gray-800": $gray-800,
   "gray-1000": $gray-1000,
+
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -463,7 +467,7 @@ $spacers: (
   12: $spacer * 4,
   13: $spacer * 4.25,
   14: $spacer * 4.5,
-  15: $spacer * 5
+  15: $spacer * 5,
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -938,7 +942,8 @@ $btn-link-focus-shadow-rgb: to-rgb(
 // $btn-border-radius:           var(--#{$prefix}border-radius) !default;
 $btn-border-radius: $border-radius-0 !default;
 $btn-border-radius-sm: var(--#{$prefix}border-radius-sm) !default;
-$btn-border-radius-lg: var(--#{$prefix}border-radius-lg) !default;
+// $btn-border-radius-lg: var(--#{$prefix}border-radius-lg) !default;
+$btn-border-radius-lg:  $border-radius-0 !default;
 
 $btn-transition:
   color 0.15s ease-in-out,
