--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,6 +17,7 @@
 @import './pages/activity-casper.scss';
 @import './pages/discuss.scss';
 @import './pages/post-article.scss';
+@import './pages/Project-evaluate';
 
 
 
