--- a/assets/scss/pages/_ProjectList-project.scss
+++ b/assets/scss/pages/_ProjectList-project.scss
@@ -99,3 +99,19 @@
     width: 224px;
     height: 120px;
 }
+
+.created-title {
+    margin: 28px 28px 16px 28px;;
+    
+}
+
+
+
+.created-form ul {
+    width: 280px;
+}
+
+.solid{
+    margin-left: 28px;
+    margin-right: 28px;
+}
