--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -15,18 +15,18 @@
 
       <ul class="flex-column fw-bold">
         <li class="nav-link text-gray-400 fs-4 pt-2">投資人</li>
-        <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">建立/修改投資人資料</a></li>
+        <li><a href="meber-newinvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">建立/修改投資人資料</a></li>
       </ul>
 
       <ul class="flex-column fw-bold">
         <li class="nav-link text-gray-400 fs-4 pt-2">評價紀錄</li>
-        <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目評價</a></li>
-        <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人評價</a></li>
+        <li><a href="meber-evaluateProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目評價</a></li>
+        <li><a href="meber-evaluateInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人評價</a></li>
       </ul>
       <ul class="flex-column fw-bold">
       <li class="nav-link text-gray-400 fs-4 pt-2">我的收藏</li>
-      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目收藏列表</a></li>
-      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人收藏列表</a></li>
+      <li><a href="meber-collectProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目收藏列表</a></li>
+      <li><a href="meber-collectInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人收藏列表</a></li>
     </ul>
     <ul class="flex-column fw-bold">
     <li class="nav-link text-gray-400 fs-4 pt-2">我的活動</li>
