--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -12,6 +12,7 @@
 
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
+@import "./layout/chat-room.scss";
 
 @import "./pages/index.scss";
 @import "./pages/activity.scss";
@@ -21,3 +22,4 @@
 @import "./pages/discuss.scss";
 @import "./pages/post-article.scss";
 @import "./pages/admin.scss";
+@import "./pages/login.scss";
