--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,6 +2,9 @@
   position: relative;
   padding-top: 52px;
   padding-bottom: 80px;
+  ul {
+    list-style: none;
+  }
   @include mobile {
     padding-top: 40px;
     padding-bottom: 56px;
@@ -33,7 +36,7 @@
   width: 100%;
   z-index: -2;
   @include mobile {
-    height: 1740px;
+    height: 1820px;
     background-position: center;
     background-size: cover;
   }
