--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -31,6 +31,7 @@
 @import "./pages/index.scss";
 @import "./pages/activity.scss";
 @import "./pages/ProjectList-project.scss";
+@import "./pages/ProjectList-investor.scss";
 @import "./pages/_about-us.scss";
 @import "./pages/activity-casper.scss";
 @import "./pages/discuss.scss";
