--- a/components/admin/investor.ejs
+++ b/components/admin/investor.ejs
@@ -1,8 +1,8 @@
 <h1 class="fs-2 mb-7 fw-bold">投資者</h1>
 <form class="form-inline w-100 d-flex align-items-center">
-  <input class="form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 投資者姓名">
+  <input class="admin__input form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 投資者姓名">
   
-  <button class="btn btn-primary-600 fw-bold rounded me-3" type="submit">搜尋</button>
+  <button class="btn btn-primary-600 fw-bold rounded me-3 text-nowrap" type="submit">搜尋</button>
   
   <div class="admin-dropdown dropdown me-3">
     <button class="btn btn-secondary dropdown-toggle rounded bg-gray-1000" type="button" id="dropdownButtonVerify" data-bs-toggle="dropdown">
@@ -136,20 +136,20 @@
         <h4 class="fs-4 mb-3">是否啟用</h4>
         <form class="d-flex">
           <label class="me-2">
-              <input type="radio" name="fruit" value="available">啟用
+              <input type="radio" name="availability" value="available">啟用
           </label>
           <label>
-              <input type="radio" name="fruit" value="unavailable">未啟用
+              <input type="radio" name="availability" value="unavailable">未啟用
           </label>
         </form>
         <hr>
         <h4 class="fs-4 mb-3">是否設置為熱門</h4>
         <form class="d-flex">
           <label class="me-2">
-              <input type="radio" name="fruit" value="available">是
+              <input type="radio" name="availability" value="available">是
           </label>
           <label>
-              <input type="radio" name="fruit" value="unavailable">否
+              <input type="radio" name="availability" value="unavailable">否
           </label>
         </form>
         <hr>
