--- a/components/admin/account.ejs
+++ b/components/admin/account.ejs
@@ -1,8 +1,8 @@
 <h1 class="fs-2 mb-7 fw-bold">會員管理</h1>
 <form class="form-inline w-100 d-flex align-items-center">
-  <input class="form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 會員姓名">
+  <input class="admin__input form-control me-2 flex-grow-1 admin-search" type="search" placeholder="搜尋 ID / 會員姓名">
   
-  <button class="btn btn-primary-600 fw-bold rounded me-3" type="submit">搜尋</button>
+  <button class="btn btn-primary-600 fw-bold rounded me-3 text-nowrap" type="submit">搜尋</button>
   
   <div class="admin-dropdown dropdown me-3">
     <button class="btn btn-secondary dropdown-toggle rounded bg-gray-1000" type="button" id="dropdownButtonVerify" data-bs-toggle="dropdown">
@@ -114,7 +114,7 @@
       </div>
       <div class="modal-body admin-modal-body">
         <h4 class="fs-4 fw-bold mb-3">基本資訊</h4>
-        <p >會員ID：1</p>
+        <p>會員ID：1</p>
         <p>姓名：John Smith</p>
         <p>性別：男</p>
         <p>身分：投資者</p>
