--- a/components/admin/investor.ejs
+++ b/components/admin/investor.ejs
@@ -155,7 +155,7 @@
         <hr>
         <h4 class="fs-4 mb-3">財力驗證</h4>
         <p class="mb-2">財力證明：</p>
-        <img src="https://picsum.photos/id/514/600/400" alt="">
+        <img src="https://dollar-loan.com/wp-content/uploads/2023/09/financial-statement6.png" alt="">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded">未通過</button>
