--- a/layout/admin-sidebar.ejs
+++ b/layout/admin-sidebar.ejs
@@ -39,12 +39,12 @@
       文章管理</a>
   </li>
   <li class="nav-item">
-    <a href="/" class="nav-link admin-nav-link text-white">
+    <a href="../index.html" class="nav-link admin-nav-link text-white">
       <i class="bi bi-arrow-return-left"></i>
       回前台首頁</a>
   </li>
   <li class="nav-item mt-5">
-    <a href="/adminLogin" class="nav-link admin-nav-link d-flex align-items-center text-white" onclick="adminLogout()">
+    <a href="../admin/admin-login.html" class="nav-link admin-nav-link d-flex align-items-center text-white" onclick="adminLogout()">
       <i class="bi bi-box-arrow-right me-2"></i>
       登出
     </a>
