--- a/components/admin/startup.ejs
+++ b/components/admin/startup.ejs
@@ -152,7 +152,7 @@
         <h4 class="fs-4 mb-3">公司行號審核</h4>
         <p class="mb-3">公司名稱：上海公司</p>
         <p class="mb-2">財力證明：</p>
-        <img src="https://picsum.photos/id/514/600/400" alt="">
+        <img src="https://dollar-loan.com/wp-content/uploads/2023/09/financial-statement6.png" alt="">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary rounded">未通過</button>
