更新手機sidebar、我的帳戶、評價、收藏區塊RWD

--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column  p-3 text-white bg-gray-1000  sidemenu-link d-none d-lg-block" >
+<div class="d-flex flex-column  p-3 text-white sidemenu-link d-none d-lg-block bg-gray-1000 bg-opacity-75" >
     <ul class="flex-column fw-bold list-unstyled">
       <li class="nav-link text-gray-400 fs-4">我的帳戶</li>
       <li><a href="member.html" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" >個人資料</a></li>
