--- a/assets/scss/pages/_meber-collectProjects.html.scss
+++ b/assets/scss/pages/_meber-collectProjects.html.scss
@@ -1,4 +1,20 @@
+.bg-green {
+  position: relative;
+}
 
+.bg-green::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(/assets/images/bg-halo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.3; 
+  z-index: -1; 
+}
 
 
 @media (max-width: 768px) {
