--- a/assets/scss/pages/_meber-createdprojects.scss
+++ b/assets/scss/pages/_meber-createdprojects.scss
@@ -1,24 +1,18 @@
-.created-title {
+.title-createdprojects {
     padding: 28px 28px 16px 28px;
 }
 
-.created-bady {
+.bady-createdprojects {
     padding: 0 28px 28px 28px;
 }
 
-.created-form ul {
+.form-createdprojects ul {
     width: 280px;
 }
 
-.upload {
-    background-image: url(/assets/images/頭像1.png);
-    background-size: cover;
-    width: 200px;
-    height: 200px;
-}
 
 @media (max-width: 768px) {
-    .created-form ul {
+    .form-createdprojects ul {
         width: 100%; 
     }
 }
