--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -30,13 +30,13 @@
     </ul>
     <ul class="flex-column fw-bold list-unstyled">
     <li class="nav-link text-gray-400 fs-4 pt-2">我的活動</li>
-    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">已申請活動</a></li>
-    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">活動紀錄</a></li>
+    <li><a href="meber-applyActivity.html" class="nav-link text-white fs-5 ps-1 lh-lg">已申請活動</a></li>
+    <li><a href="member-activityrecord.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">活動紀錄</a></li>
   </ul>
 
   <ul class="flex-column fw-bold list-unstyled">
   <li class="nav-link text-gray-400 fs-4 pt-2">我的消息</li>
-  <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">站內消息</a></li>
+  <li><a href="member-sitenews.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">站內消息</a></li>
 </ul>
   
 <ul class="flex-column fw-bold list-unstyled">
