新增member-pages頁面將合併其他member資料夾頁面

--- a/assets/scss/pages/_member-sidebar.scss
+++ b/assets/scss/pages/_member-sidebar.scss
@@ -1,5 +1,5 @@
-.sidemenu-link a:hover {
-    color: #43E1BF !important; 
-    outline: none;
-}
+// .sidemenu-link a:hover {
+//     color: #43E1BF !important; 
+//     outline: none;
+// }
 
