--- a/components/member-sidebar2.ejs
+++ b/components/member-sidebar2.ejs
@@ -1,11 +1,11 @@
 <div class="d-flex flex-column  p-3 text-white sidemenu-link d-none d-lg-block bg-gray-1000 bg-opacity-75" >
     <ul class="flex-column fw-bold list-unstyled">
       <li class="nav-link text-gray-400 fs-4">我的帳戶</li>
-      <li><a href="member.html" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" data-content="member">個人資料</a></li>
-      <li><a href="meber-identity.html" class="nav-link text-white fs-5 ps-1 lh-lg" >身份審核</a></li>
-      <li><a href="member-changepassword.html" class="nav-link text-white fs-5 ps-1 lh-lg" >修改密碼</a></li>
-      <li><a href="meber-points.html" class="nav-link text-white fs-5 ps-1 lh-lg">可用點數</a></li>
-      <li><a href="member-settings.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">隱私設置</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" data-content="member" data-title="個人資料">個人資料</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-identity" data-title="身分審核">身份審核</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-changepassword" data-title="修改密碼">修改密碼</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-points" data-title="可用點數">可用點數</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-settings" data-title="隱私設置">隱私設置</a></li>
     </ul>
       <ul class="flex-column fw-bold list-unstyled">
         <li  class="nav-link text-gray-400 fs-4 pt-2">創業項目</li>
