--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -28,3 +28,5 @@
 @import "./pages/member-sidebar.scss";
 @import "./pages/article-content.scss";
 @import "./pages/meber-collectProjects.html.scss";
+@import "./pages/pay-plan.scss";
+@import "./pages/checkout.scss";
