--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -25,7 +25,7 @@
                     <li><a class="fw-bold text-primary-600" href="#">隱私權政策</a></li>
                 </ul>
                 <ul class="footer-navbar me-5">
-                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="#">付費方案</a></li>
+                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="/pages/pay-plan.html">付費方案</a></li>
                     <li class="fw-bold text-primary-600 mb-2"><a href="#">購點方案</a></li>
                     <li class="fw-bold text-primary-600"><a href="#">購點專區</a></li>
                 </ul>
