--- a/assets/scss/layout/_chat-room.scss
+++ b/assets/scss/layout/_chat-room.scss
@@ -27,14 +27,17 @@
     position: fixed;
     bottom:0px;
     right:20px;
-    z-index: 10;
     background-color: $gray-1000;
     border: 1px solid $gray-200;
-    height: 400px;
+    max-height: 400px;
     width: 640px;
+    overflow: hidden;
+    z-index: 999;
+    // transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    // opacity: 0;
     @include mobile {
         right:0px;
-        display: none;
+        width: 100%;
       }
 }
 
