--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,37 +1,57 @@
 <nav class="header navbar navbar-expand-lg fixed-top">
-    <div class="container d-flex justify-content-center">
-        <!-- logo -->
-          <div class="d-flex justify-content-between align-items-center me-auto">
-            <a class="navbar-brand" href="/pages/index.html">
-                <img src="/assets/images/創夢工坊-logo.png" alt="創夢工坊" style="width: 56px;">
-            </a>
-         </div>
-         <button class="navbar-toggler btn-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon d-flex align-items-center justify-content-center">
-            <i class="bi bi-list list-icon"></i>
-          </span>
-        </button>
-      
-      <!-- nav -->
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/project/ProjectList-project.html">找創業項目</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/investor/ProjectList-investor.html">找投資人</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">付費方案</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/discuss.html">討論區</a>
-          </li>
-        </ul>
-      </div>
-
-       <a href="/pages/login.html" class="btn login-btn btn-primary-600 d-none d-lg-block">
-        註冊/登入
-       </a>
+  <div class="container d-flex justify-content-center">
+    <div class="d-flex justify-content-between align-items-center me-auto">
+      <a class="navbar-brand" href="/pages/index.html">
+        <img
+          src="/assets/images/創夢工坊-logo.png"
+          alt="創夢工坊"
+          style="width: 56px"
+        />
+      </a>
     </div>
-  </nav>
+    <button
+      class="navbar-toggler btn-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span
+        class="navbar-toggler-icon d-flex align-items-center justify-content-center"
+      >
+        <i class="bi bi-list list-icon"></i>
+      </span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/project/ProjectList-project.html"
+            >找創業項目</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/investor/ProjectList-investor.html"
+            >找投資人</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/pay-plan.html">付費方案</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/discuss.html">討論區</a>
+        </li>
+      </ul>
+    </div>
+
+    <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-none d-lg-block"
+    >
+      註冊/登入
+    </a>
+  </div>
+</nav>
+
