--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -7,19 +7,6 @@
 @import "./base/base.scss";
 
 @import "./mixin/mixin.scss";
-
-
-@import './layout/header.scss';
-@import './layout/footer.scss';
-
-@import './pages/index.scss';
-@import './pages/activity.scss';
-@import './pages/ProjectList-project.scss';
-@import './pages/_about-us.scss';
-@import './pages/activity-casper.scss';
-@import './pages/discuss.scss';
-@import './pages/post-article.scss';
-@import './pages/Project-evaluate';
 @import "./utils/universal.scss";
 
 
@@ -42,3 +29,4 @@
 @import "./pages/member-pages.scss";
 @import "./pages/pay-plan.scss";
 @import "./pages/checkout.scss";
+@import './pages/project-information';
