--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,15 +1,4 @@
 <nav class="header navbar navbar-expand-lg fixed-top">
-<<<<<<< HEAD
-  <div class="container d-flex justify-content-center">
-    <div class="d-flex justify-content-between align-items-center me-auto">
-      <a class="navbar-brand" href="/pages/index.html">
-        <img
-          src="/assets/images/創夢工坊-logo.png"
-          alt="創夢工坊"
-          style="width: 56px"
-        />
-      </a>
-=======
     <div class="container d-flex justify-content-center">
         <!-- logo -->
           <div class="d-flex justify-content-between align-items-center me-auto">
@@ -27,10 +16,10 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="project/ProjectList-project.html">找創業項目</a>
+            <a class="nav-link" href="projectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="investor/ProjectList-investor.html">找投資人</a>
+            <a class="nav-link" href="projectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
