--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -184,6 +184,19 @@
   }
 }
 
+.background-container {
+  width: 229.5px;
+  height: 120px;
+  background-size: 100%;
+  background-position: center;
+  transition: background-size 0.3s ease;
+  overflow: hidden;
+}
+
+.background-container:hover {
+  background-size: 120%;
+}
+
 .industry-card {
   height: 120px;
   padding: 12px;
