--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -44,6 +44,13 @@
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
         </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
+        </li>
       </ul>
     </div>
 
