--- a/components/member/member-applyActivity.ejs
+++ b/components/member/member-applyActivity.ejs
@@ -32,7 +32,7 @@
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
           <div class="modal-body text-center text-primary-600 fs-3 fw-bold">
-             是否刪除?
+             是否取消申請?
           </div>
           <div class="border-0 text-center mt-15 mb-14">
               <button type="button" class="btn btn-lg btn-gray-600 fw-bolder px-9" data-bs-dismiss="modal">取消</button>
