--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -657,7 +657,7 @@ $aspect-ratios: (
 // stylelint-disable value-keyword-case
 
 $font-family-sans-serif:
-  "Noto Serif TC",
+  "Noto Sans TC",
   serif,
   system-ui,
   -apple-system,
