--- a/assets/scss/layout/_chat-room.scss
+++ b/assets/scss/layout/_chat-room.scss
@@ -13,9 +13,15 @@
     .chat-img {
         width: 40px;
     }
+    @include pad {
+        padding: 12px;
+        right: 10px;
+        top: 100px;
+        bottom: auto;
+      }
     @include mobile {
-        padding: 16px;
-        right: 20px;
+        padding: 8px;
+        right: 10px;
         top: 100px;
         bottom: auto;
       }
@@ -32,7 +38,7 @@
     max-height: 400px;
     width: 640px;
     overflow: hidden;
-    z-index: 999;
+    z-index: 9999;
     // transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     // opacity: 0;
     @include mobile {
