--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -2,6 +2,12 @@
     margin-top: 180px;
     margin-bottom: 160px;
     width: 534px;
+    @include pad {
+      width: 100%;
+    }
+    @include mobile {
+      width: 100%;
+    }
 }
 
 .login-input {
@@ -17,6 +23,12 @@
       border: 2px solid $primary-600;
     }
     &::placeholder {
-      color: $gray-100;
+      color: $gray-400;
     }
   }
+
+  // .progress {
+  //   @include mobile {
+  //     width: 45%;
+  //   }
+  // }
