--- a/assets/scss/pages/_pay-plan.scss
+++ b/assets/scss/pages/_pay-plan.scss
@@ -4,7 +4,18 @@
     max-width: 100%;
     height: 628px;
     background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
+    @include pad {
+        margin-top: 100px;
+        margin-bottom: 100px;
+        height: 400px;
+    }
+    @include mobile {
+        margin-top: 100px;
+        margin-bottom: 50px;
+        height: 200px;
+    }
 }
 
 .points-card {
