--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -10,7 +10,7 @@
                     </a>
                     
                     <h3 class="fw-bold mb-5">Dream Workshop</h3>
-                    <ul class="d-flex justify-content-center justify-content-lg-start">
+                    <ul class="d-flex justify-content-center justify-content-sm-start justify-content-md-start">
                         <li><a href="#"><i class="icons bi bi-facebook me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-instagram me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-line"></i></a></li>
