--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -47,7 +47,7 @@
         <li class="nav-item text-end">
           <a
       href="/pages/login/login.html"
-      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      class="btn login-btn btn-primary-600 d-lg-none mt-8 mt-lg">
       註冊/登入
     </a>
         </li>
