更新文字粗細體

--- a/components/member/member-identity.ejs
+++ b/components/member/member-identity.ejs
@@ -42,7 +42,7 @@
             <input type="text" readonly class="form-control-plaintext text-white" id="email" value="happy5678@gmail.com">
           </div>
           <div class="col-sm-4">
-          <button type="button" class="btn btn-lg fw-bold btn-primary-600">驗證</button>
+          <button type="button" class="btn btn-lg  btn-primary-600">驗證</button>
         </div>
         </div>
        
@@ -54,7 +54,7 @@
             pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">
           </div>
           <div class="col-sm-4">
-            <button type="button" class="btn btn-lg fw-bold btn-primary-600">變更</button>
+            <button type="button" class="btn btn-lg  btn-primary-600">變更</button>
           </div>
         </div>
 >
