--- a/components/member/member-postarticle.ejs
+++ b/components/member/member-postarticle.ejs
@@ -1,5 +1,5 @@
         <div class="row my-8">
-          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">標題</label>
+          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end  text-gray-400">標題</label>
           <div class="col-sm-10">
             <input type="text" class="form-control form-control-lg bg-gray-800 bg-opacity-50 text-white" id="colFormLabelLg" >
           </div>
@@ -7,7 +7,7 @@
 
 
 <div class="row my-8">
-    <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">內容</label>
+    <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-lg-end  text-gray-400">內容</label>
     <div class="col-sm-10">
         <textarea type="text" id="editor" class="form-control"></textarea>
     </div>
@@ -25,7 +25,7 @@
 </div>
 <div class="d-flex justify-content-center mt-8">
 <div class="me-5">
-<button class="btn btn-lg btn-outline-primary-600 fw-bolder" data-bs-toggle="modal" data-bs-target="#member-postarticle-modal">
+<button class="btn btn-lg btn-outline-primary-600" data-bs-toggle="modal" data-bs-target="#member-postarticle-modal">
     <i class="bi bi-save"></i> 發表文章
 </button>
 </div>
