--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,7 +2,7 @@
 <nav class="header navbar navbar-expand-lg fixed-top">
 <div class="container d-flex justify-content-center">
     <div class="d-flex justify-content-between align-items-center me-auto">
-      <a class="navbar-brand" href="/pages/index.html">
+      <a class="navbar-brand" href="index.html">
         <img
           src="/assets/images/創夢工坊-logo.png"
           alt="創夢工坊"
@@ -55,7 +55,7 @@
     </div>
 
     <a
-      href="/pages/login/login.html"
+      href="login.html"
       class="btn login-btn btn-primary-600 d-none d-lg-block"
     >
       註冊/登入
