--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -205,7 +205,7 @@
 
 .industry-card {
   height: 120px;
-  padding: 12px;
+  // padding: 12px;
   font-weight: bolder;
   display: flex;
   justify-content: end;
@@ -216,8 +216,26 @@
     font-weight: bold;
     letter-spacing: 6%;
   }
+  @include pad {
+    padding-inline: 6px!important;
+  }
   @include mobile {
     width: 100%;
     height: 100px;
   }
+}
+@media (min-width: 992px) and (max-width: 1400px) {
+  // .industry-card img {
+  //   max-width: 80px;
+  // }
+  // .field-map .container {
+  //   max-width: 100%;
+  // }
+  // .field-map .container {
+  //   margin: 0; 
+  // }
+  .col-custom-3 {
+    flex: 0 0 33.333%; /* 佔 1/3 寬度 */
+    max-width: 33.333%;
+}
 }
